kustomize-pythonsimple/pythonsimple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonsimple
  namespace: pythonsimple
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: pythonsimple
  template:
    metadata:
      labels:
        app: pythonsimple
    spec:
      containers:
      - image: jordanmom/pythonsimple:1.1.0
        name: pythonsimple
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "100m"
            memory: "100Mi"
          requests:
            cpu: "50m"
            memory: "50Mi"
