kustomize-pythonsimple/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pythonsimple-ingress
  namespace: pythonsimple
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: pythonsimple.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomize-pythonsimple
            port:
              number: 5000
